--- a/BookMan.UI/BookMan.UI.csproj
+++ b/BookMan.UI/BookMan.UI.csproj
@@ -16,4 +16,8 @@
 	  <Folder Include="Framework\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Spectre.Console" Version="0.49.1" />
+	</ItemGroup>
+
 </Project>
